--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-group-routes": "^1.1.0",
     "fs": "^0.0.1-security",
+    "lowdb": "^3.0.0",
     "moment": "^2.29.4",
     "mqtt": "^4.3.7",
     "sqlite3": "^5.0.11",
