--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "mqtt": "^4.3.7",
     "sqlite3": "^5.0.11",
+    "telnet-client": "^2.0.4",
     "xml2js": "^0.4.23",
     "xml2json": "^0.12.0"
   },
