--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "express": "^4.18.1",
     "express-group-routes": "^1.1.0",
     "fs": "^0.0.1-security",
