--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mqtt": "^4.3.7",
     "sqlite3": "^5.0.11",
     "telnet-client": "^2.0.4",
+    "url": "^0.11.0",
     "xml2js": "^0.4.23",
     "xml2json": "^0.12.0"
   },
