--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "cron": "^2.1.0",
+    "delay": "^5.0.0",
     "express": "^4.18.1",
     "express-group-routes": "^1.1.0",
     "fs": "^0.0.1-security",
