--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "cron": "^2.1.0",
     "delay": "^5.0.0",
     "events": "^3.3.0",
+    "excel4node": "^1.8.0",
     "express": "^4.18.1",
     "express-group-routes": "^1.1.0",
+    "fast-csv": "^4.3.6",
     "fs": "^0.0.1-security",
     "lowdb": "^3.0.0",
     "moment": "^2.29.4",
     "mqtt": "^4.3.7",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "sqlite3": "^5.0.11",
     "telnet-client": "^2.0.4",
     "url": "^0.11.0",
