--- a/k8s/api-hub-server-deployment.yaml
+++ b/k8s/api-hub-server-deployment.yaml
@@ -14,6 +14,18 @@ spec:
     spec:
       containers:
         - name: api-hub-server
-          image: 192.168.196.28:5000/api-hub-server:v1.0
+          image: harbor.wise-paas.io/library/api-hub-server:v-1.0.0
           ports:
             - containerPort: 4000
+          resources:
+            limits:
+              cpu: "8"
+              memory: 1024Mi
+              ephemeral-storage: 128Mi
+            requests:
+              cpu: "2"
+              memory: 512Mi
+          env:
+            - name: TZ
+              value: Asia/Ho_Chi_Minh
+        
