--- a/k8s/api-hub-server-service.yaml
+++ b/k8s/api-hub-server-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: api-hub-server-service
 spec:
-  type: LoadBalancer
+  type: NodePor
   ports:
     - protocol: TCP
       port: 4000
